@@ -4,9 +4,13 @@ import com.rdi.geegstar.data.models.Booking;
 import com.rdi.geegstar.data.models.EventDetail;
 import com.rdi.geegstar.data.models.User;
 import com.rdi.geegstar.data.repositories.BookingRepository;
+import com.rdi.geegstar.dto.requests.AcceptBookingRequest;
 import com.rdi.geegstar.dto.requests.BookTalentRequest;
 import com.rdi.geegstar.dto.requests.EventDetailRequest;
-import com.rdi.geegstar.dto.response.BookCreativeTalentResponse;
+import com.rdi.geegstar.dto.response.AcceptBookingResponse;
+import com.rdi.geegstar.dto.response.BookTalentResponse;
+import com.rdi.geegstar.dto.response.DeclineBookingResponse;
+import com.rdi.geegstar.exceptions.BookingNotFoundException;
 import com.rdi.geegstar.exceptions.UserNotFoundException;
 import com.rdi.geegstar.services.BookTalentService;
 import com.rdi.geegstar.services.EventDetailsService;
@@ -15,7 +19,7 @@ import lombok.AllArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.List;
 
 @Service
 @AllArgsConstructor
@@ -27,20 +31,43 @@ public class GeegStarBookTalentService implements BookTalentService {
     private final BookingRepository bookingRepository;
 
     @Override
-    public BookCreativeTalentResponse bookTalent(BookTalentRequest bookCreativeTalentRequest) throws UserNotFoundException {
-        EventDetailRequest eventDetailsRequest = bookCreativeTalentRequest.getEventDetails();
+    public BookTalentResponse bookTalent(BookTalentRequest bookCreativeTalentRequest) throws UserNotFoundException {
+        EventDetailRequest eventDetailsRequest = bookCreativeTalentRequest.getEventDetail();
         EventDetail eventDetails = eventDetailsService.create(eventDetailsRequest);
         Booking savedBooking = getSavedBooking(bookCreativeTalentRequest, eventDetails);
-        return modelMapper.map(savedBooking, BookCreativeTalentResponse.class);
+        return modelMapper.map(savedBooking, BookTalentResponse.class);
+    }
+
+    @Override
+    public AcceptBookingResponse acceptBooking(AcceptBookingRequest acceptBookingRequest) throws BookingNotFoundException {
+        Long bookingId = acceptBookingRequest.getBookingId();
+        Booking foundBooking = getBooking(bookingId);
+        foundBooking.setAccepted(acceptBookingRequest.getBookingReply());
+        bookingRepository.save(foundBooking);
+        //Create a bill calling the bookingBill service
+        return new AcceptBookingResponse("Successful");
+    }
+
+    private Booking getBooking(Long bookingId) throws BookingNotFoundException {
+        return bookingRepository.findById(bookingId)
+                .orElseThrow(() -> new BookingNotFoundException(String.format("The booking with %d id is not found", bookingId)));
+    }
+
+    @Override
+    public DeclineBookingResponse declineBooking(Long bookingId) throws BookingNotFoundException {
+        Booking foundBooking = getBooking(bookingId);
+        foundBooking.setAccepted(false);
+        bookingRepository.save(foundBooking);
+        return new DeclineBookingResponse("Successful");
     }
 
     private Booking getSavedBooking(BookTalentRequest bookCreativeTalentRequest, EventDetail eventDetails) throws UserNotFoundException {
-        User creativeTalent = userService.findById(bookCreativeTalentRequest.getCreativeTalentId());
-        User eventPlanner = userService.findById(bookCreativeTalentRequest.getEventPlannerId());
+        User creativeTalent = userService.findById(bookCreativeTalentRequest.getTalent());
+        User eventPlanner = userService.findById(bookCreativeTalentRequest.getPlanner());
         Booking booking = new Booking();
-        booking.setCreativeTalent(Collections.singletonList(creativeTalent));
-        booking.setEventPlanner(eventPlanner);
-        booking.setEventDetails(eventDetails);
+        booking.setTalent(List.of(creativeTalent));
+        booking.setPlanner(eventPlanner);
+        booking.setEventDetail(eventDetails);
         return bookingRepository.save(booking);
     }
 }
